z-index in link component fixed, so again it displayes bounce background

--- a/src/app/common/link-searcher/link/link.component.css
+++ b/src/app/common/link-searcher/link/link.component.css
@@ -54,7 +54,7 @@ a:link {
       transition-duration: 0.3s;
       transform-origin: 0%;
       content: "";
-      z-index: -1;
+      /* z-index: -1; */
   }
   a:hover::before{
     transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
